--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "clsx": "latest",
     "gray-matter": "^4.0.2",
     "isomorphic-unfetch": "^3.0.0",
+    "moment": "^2.27.0",
     "next": "latest",
     "prop-types": "latest",
     "react": "latest",
-    "react-dom": "latest",    
+    "react-dom": "latest",
     "react-swipeable-views": "^0.13.9",
     "remark": "^12.0.1",
     "remark-html": "^12.0.0"
